# atkv

./: .gitignore  .travis.yml  CMakeLists.txt  GPLHEADER  README.md  circle.yml
cmake/: AtMacros.cmake
data/: #studio_main.ui#  stripe.pgm  stripe.ppm  studio.css  studio_main.ui  studio_main.ui~  test_gl_frag.glsl  test_gl_vertex.glsl
include/at/core/: array.h  array_template.h.in  arraybase.h  bucketqueue.h  config.h  config.h.in  macro.h  mat4.h  range.h  type.h  vec2.h  vec2i.h  vec3i.h  vec4i.h  vec5i.h  vec6i.h  vec7i.h  vec_template.h.in  veci_template.h.in
include/at/gl/: camera.h  colormaterial.h  container.h  geometry.h  light.h  loader.h  material.h  materialcollection.h  mesh.h  movableobject.h  object.h  orthographiccamera.h  perspectivecamera.h  pointlight.h  program.h  renderer.h  scene.h  shader.h  texturematerial.h  trianglegeometry.h
include/at/graph/: adjacency.h  component.h  grapharray.h
include/at/gui/: imageviewer.h  volumeviewer.h
include/at/ift/: ift.h
include/at/imgproc/: dicom.h  drawing.h  image_io.h  nifti.h  znzfile.h
include/at/studio/: app.h  window.h
src/core/: array_template.c.in  arraybase.c  bucketqueue.c  config.c  mat4.c  range.c  vec2.c  vec2i.c  vec3i.c  vec4i.c  vec5i.c  vec6i.c  vec7i.c  vec_template.c.in  veci_template.c.in
src/gl/: camera.c  colormaterial.c  container.c  geometry.c  light.c  loader.c  material.c  materialcollection.c  mesh.c  movableobject.c  object.c  orthographiccamera.c  perspectivecamera.c  pointlight.c  program.c  scene.c  shader.c  texturematerial.c  trianglegeometry.c
src/graph/: adjacency.c  component.c  grapharray.c
src/gui/: imageviewer.c  volumeviewer.c
src/ift/: ift.c
src/imgproc/: dicom.c  drawing.c  image_io.c  nifti.c  znzfile.c
src/studio/: app.c  main.c  window.c
tests/core/: test_array.c  test_bucketqueue.c  test_mat4.c  test_vec3.c  test_vec4.c  test_vec6.c  test_vec7.c
tests/gl/: test_camera.c  test_gl.c  test_loader.c  test_trianglegeometry.c
tests/graph/: test_component.c
tests/gui/: test_imageviewer.c  test_volumeviewer.c
tests/ift/: demo_orfc.c  test_ift.c
tests/imgproc/: test_dicom.c  test_drawing.c  test_image_io.c  test_nifti.c
